@@ -15,6 +15,7 @@ Make sure that yGetTL850Memory is really allocating card memory (not system
 What if top half gets called multiple times before bottom half executes?  Make
   a new struct that contains information about each interrupt state, kmalloc it
   in top half, free it in bottom half.  If necessary.
+Make the "someone else's interrupt" code more robust (it gives false alarms).
 
 vim: tw=80
 
